--- a/css/fonts.css
+++ b/css/fonts.css
@@ -44,7 +44,7 @@ label,
 .team-title span,
 .before-heading,
 .wedding-head .first-name span,
-.wedding-head .last-name span { font-family: 'Quicksand', sans-serif !important; }
+.wedding-head .last-name span { font-family: 'Lexend', sans-serif !important; }
 
 
 .font-secondary { font-family: 'Chewy', cursive; }
